--- a/05-MY451_5.rmd
+++ b/05-MY451_5.rmd
@@ -268,7 +268,7 @@ When $Y$ is coded with values 0 and 1, $\hat{\pi}$ is also equal to the
 sample mean of $Y$, since $$\bar{Y}=\frac{Y_{1}+Y_{2}+\dots+Y_{n}}{n}=
 \frac{0+0+\dots+0+\overbrace{1+1+\dots+1}^{m \text{ ones}}}{n}=
 \frac{m}{n}=\hat{\pi}.
-\label{pihat_as_ybar}$$
+\label{eq:pihat_as_ybar}$$
 
 ## Significance test of a single proportion {#s-probs-test1sample}
 
@@ -276,7 +276,7 @@ sample mean of $Y$, since $$\bar{Y}=\frac{Y_{1}+Y_{2}+\dots+Y_{n}}{n}=
 
 A null hypothesis about a single population probability $\pi$ is of the
 form $$H_{0}:\; \pi=\pi_{0}
-\label{H0p}$$ where $\pi_{0}$ is a given number which is either of
+\label{eq:H0p}$$ where $\pi_{0}$ is a given number which is either of
 specific interest or in some other sense a suitable benchmark in a given
 application. For example, in the voting example 5.1 we could consider
 $\pi_{0}=0.5$, i.e. that the referendum was too close to call. In the
@@ -285,9 +285,9 @@ proportion of blacks in the general adult population of the county.
 
 An alternative but equivalent form of (\@ref(H0p)) is expressed in terms
 of the difference $$\Delta=\pi-\pi_{0}
-\label{Dp}$$ ($\Delta$ is the upper-case Greek letter “Delta"). Then
+\label{eq:Dp}$$ ($\Delta$ is the upper-case Greek letter “Delta"). Then
 (@\ref(H0p)) can also be written as $$H_{0}: \; \Delta=0,
-\label{H0p2}$$ i.e. that there is no difference between the true
+\label{eq:H0p2}$$ i.e. that there is no difference between the true
 population probability and the hypothesised value $\pi_{0}$. This
 version of the notation allows us later to draw attention to the
 similarities between different analyses in this chapter and in
@@ -302,7 +302,7 @@ not arise for the $\chi^{2}$ test of independence in Chapter
 \@ref(c-tables). For the difference $\Delta$, we may consider two basic
 kinds of alternative hypotheses. The first is a **two-sided alternative
 hypothesis** $$H_{a}: \; \Delta\ne 0
-\label{Hatwo}$$ (where “$\ne$” means “not equal to”). This claims that
+\label{eq:Hatwo}$$ (where “$\ne$” means “not equal to”). This claims that
 the true value of the population difference $\Delta$ is some unknown
 value which is *not* 0 as claimed by the null hypothesis. With a
 two-sided $H_{a}$, sample evidence that the true difference differs from
@@ -316,10 +316,10 @@ about whether $\pi$ might be smaller or larger than $\pi_{0}$.
 The second main possibility is one of the two **one-sided alternative
 hypotheses** $$\begin{aligned}
 H_{a}:&&  \Delta> 0 \text{or}
-\label{Haonegt}
+\label{eq:Haonegt}
 \\
 H_{a}:&&  \Delta < 0.
-\label{Haonelt}\end{aligned}$$ Such a hypothesis is only interested in
+\label{eq:Haonelt}\end{aligned}$$ Such a hypothesis is only interested in
 values of $\Delta$ to one side of 0, either larger or smaller than it.
 For example, hypothesis (\@ref(Haonegt)) in the referendum example 5.1,
 with $\pi_{0}=0.5$, is $H_{a}:\; \pi>0.5$, i.e. that the proportion who
@@ -373,7 +373,7 @@ the **z-test statistic** $$z=
 \frac{\text{Estimate of the population difference $\Delta$}}
 {\text{Estimated standard error
 of the estimate of $\Delta$}}.
-\label{ttest_gen}$$ The statistic is introduced first in this form in
+\label{eq:ttest_gen}$$ The statistic is introduced first in this form in
 order to draw attention to its generality. Null hypotheses in many
 ostensibly different situations can be formulated as hypotheses of the
 form (\@ref(H0p2)) about population differences of some kind, and each
@@ -392,7 +392,7 @@ of the $z$-test statistic, but its basic idea is still the same.
 In (\@ref(ttest-gen)), $\hat{\Delta}$ denotes a sample estimate of
 $\Delta$. For a test of a single proportion, this is
 $$\hat{\Delta} = \hat{\pi}-\pi_{0},
-\label{Dhatp}$$ i.e. the difference between the sample proportion and
+\label{eq:Dhatp}$$ i.e. the difference between the sample proportion and
 $\pi_{0}$. This is the core of the test statistic. Although the forms of
 the two statistics seem rather different, (\@ref(Dhatp)) contains the
 comparison of the observed and expected sample values that was also at
@@ -430,10 +430,10 @@ distribution discussed in the next section will be of a convenient form.
 For a test of the hypothesis (\@ref(H0p)) about a single proportion, the
 estimated standard error under the null hypothesis is
 $$\hat{\sigma}_{\hat{\Delta}} = \sqrt{\frac{\pi_{0}(1-\pi_{0})}{n}},
-\label{seDhatp}$$ and the specific formula of the test statistic
+\label{eq:seDhatp}$$ and the specific formula of the test statistic
 (\@ref(ttest-gen)) is then $$z=\frac{\hat{\pi}-\pi_{0}}
 {\sqrt{\pi_{0}(1-\pi_{0})/n}}.
-\label{ztestp}$$ This is the **one-sample $z$-test statistic for a
+\label{eq:ztestp}$$ This is the **one-sample $z$-test statistic for a
 population proportion**.
 
 In Example 5.1 we have $\hat{\pi}=0.47$, $\pi_{0}=0.5$, and $n=702$, so
@@ -802,11 +802,11 @@ $$\text{from  }
 \text{  to  }
 \hat{\Delta}
 +1.96\times \hat{\sigma}_{\hat{\Delta}}.
-\label{cim0}$$ This is the **95 % confidence interval** for the
+\label{eq:cim0}$$ This is the **95 % confidence interval** for the
 population difference $\Delta$. It is usually written more concisely as
 $$\hat{\Delta}
 \pm 1.96\, \hat{\sigma}_{\hat{\Delta}}
-\label{cim1}$$ where the “plusminus” symbol $\pm$ indicates that we
+\label{eq:cim1}$$ where the “plusminus” symbol $\pm$ indicates that we
 calculate the two endpoints of the interval as in (\@ref(cim0)), one
 below and one above $\hat{\Delta}$.
 
@@ -821,7 +821,7 @@ is estimated by the sample proportion $\hat{\pi}$, giving the estimated
 standard error $$\hat{\sigma}_{\hat{\Delta}} = \sqrt{
 \frac{\hat{\pi}(1-\hat{\pi})}{n}
 }
-\label{sephat2}$$ and thus the 95% confidence interval
+\label{eq:sephat2}$$ and thus the 95% confidence interval
 $$(\hat{\pi}-\pi_{0}) \pm 1.96 \;
 \sqrt{
 \frac{\hat{\pi}(1-\hat{\pi})}{n}}$$ for $\Delta=\pi-\pi_{0}$.
@@ -829,7 +829,7 @@ Alternatively, a confidence interval for $\pi$ itself is given by
 $$\hat{\pi} \pm 1.96 \;
 \sqrt{
 \frac{\hat{\pi}(1-\hat{\pi})}{n}}.
-\label{cip2}$$ This is typically the most useful interval for use in
+\label{eq:cip2}$$ This is typically the most useful interval for use in
 practice. For instance, in the referendum example 5.1 this gives a 95%
 confidence interval of
 $$0.470\pm 1.96\times \sqrt{\frac{0.470\times(1-0.470)}{702}}
@@ -872,7 +872,7 @@ speaking even meaningful, in the statistical framework considered here.
 In place of the 1.96 in (\@ref(cim1)), we may also use other numbers. To
 allow for this in the notation, we can also write
 $$\hat{\Delta} \pm z_{\alpha/2}\; \hat{\sigma}_{\hat{\Delta}}.
-\label{ci_D_gen}$$ where the multiplier $z_{\alpha/2}$ is a number which
+\label{eq:ci_D_gen}$$ where the multiplier $z_{\alpha/2}$ is a number which
 depends on two things. One of them is the sampling distribution of
 $\hat{\Delta}$, which is here assumed to be the normal distribution
 (another possibility is discussed in Section
@@ -1046,10 +1046,10 @@ explanatory variable $X$:
 
 The quantity of interest is then the population difference
 $$\Delta=\pi_{2}-\pi_{1}.
-\label{Dp2sample}$$ For a significance test of this, the null hypothesis
+\label{eq:Dp2sample}$$ For a significance test of this, the null hypothesis
 will again be $H_{0}:\; \Delta=0$, which is in this case equivalent to
 the hypothesis of equal proportions $$H_{0}:\; \pi_{1} = \pi_{2}.
-\label{H0pD}$$ The null hypothesis thus claims that there is no
+\label{eq:H0pD}$$ The null hypothesis thus claims that there is no
 association between the group variable $X$ and the dichotomous response
 variable $Y$, while the alternative hypothesis (e.g.  the two-sided one
 $H_{a}:\; \pi_{1}\ne \pi_{2}$, i.e. $H_{a}:\; \Delta\ne
@@ -1059,7 +1059,7 @@ The obvious estimates of $\pi_{1}$ and $\pi_{2}$ are the corresponding
 sample proportions $\hat{\pi}_{1}$ and $\hat{\pi}_{2}$, calculated from
 samples of sizes $n_{1}$ and $n_{2}$ respectively, and the estimate of
 $\Delta$ is then $$\hat{\Delta}=\hat{\pi}_{2} - \hat{\pi}_{1}.
-\label{Dhatpi}$$ This gives $\hat{\Delta}=0.000284-0.000706=-0.000422$
+\label{eq:Dhatpi}$$ This gives $\hat{\Delta}=0.000284-0.000706=-0.000422$
 in Example 5.3 and $\hat{\Delta}=0.364-0.279=0.085$ in Example 5.4. In
 the samples, the proportion of polio cases is thus lower in the
 vaccinated group, and the proportion of optimistic answers is higher in
@@ -1103,7 +1103,7 @@ The standard error of $\hat{\Delta}$ is $$\sigma_{\hat{\Delta}} =
 \frac{\pi_{2}(1-\pi_{2})}{n_{2}}
 +\frac{\pi_{1}(1-\pi_{1})}{n_{1}}
 }.
-\label{sigmaDpi}$$ As in the one-sample case above, the best way to
+\label{eq:sigmaDpi}$$ As in the one-sample case above, the best way to
 estimate this is different for a significance test than for a confidence
 interval. For a test, the standard error can be estimated under
 assumption that the null hypothesis (\@ref(H0pD)) is true, in which case
@@ -1113,7 +1113,7 @@ of observations with value 1 for $Y$ in the total sample of
 $n_{1}+n_{2}$ observations, pooling observations from both groups
 together; expressed in terms of the group-specific estimates, this is
 $$\hat{\pi} = \frac{n_{1}\hat{\pi}_{1}+n_{2}\hat{\pi}_{2}}{n_{1}+n_{2}}.
-\label{phat2sample}$$ Using this for both $\pi_{1}$ and $\pi_{2}$ in
+\label{eq:phat2sample}$$ Using this for both $\pi_{1}$ and $\pi_{2}$ in
 (\@ref(sigmaDpi)) gives the estimated standard error
 $$\hat{\sigma}_{\hat{\Delta}}=
 \sqrt{
@@ -1122,12 +1122,12 @@ $$\hat{\sigma}_{\hat{\Delta}}=
 \frac{1}{n_{1}}
 \right),
 }
-\label{seDpi}$$ and using (\@ref(Dhatpi}) and (\ref{seDpi)) in the
+\label{eq:seDpi}$$ and using (\@ref(Dhatpi}) and (\ref{seDpi)) in the
 general formula (\@ref(ttest-gen)) gives the **two-sample $z$-test
 statistic for proportions** $$z=
 \frac{\hat{\pi}_{2}-\hat{\pi}_{1}}
 {\sqrt{\hat{\pi}(1-\hat{\pi})(1/n_{2}+1/n_{1})}}
-\label{ztestDpi}$$ where $\hat{\pi}$ is given by (\@ref(phat2sample)).
+\label{eq:ztestDpi}$$ where $\hat{\pi}$ is given by (\@ref(phat2sample)).
 When the null hypothesis is true, the sampling distribution of this test
 statistic is approximately standard normal when the sample sizes are
 large enough.
@@ -1139,14 +1139,14 @@ estimate $$\hat{\sigma}_{\hat{\Delta}} =
 \frac{\hat{\pi}_{2}(1-\hat{\pi}_{2})}{n_{2}} +
 \frac{\hat{\pi}_{1}(1-\hat{\pi}_{1})}{n_{1}}
 }
-\label{seDpi2}$$ and, substituting this to the general formula
+\label{eq:seDpi2}$$ and, substituting this to the general formula
 (\@ref(ci-D-gen)), we get
 $$(\hat{\pi}_{2}-\hat{\pi}_{1}) \pm z_{\alpha/2} \;
 \sqrt{
 \frac{\hat{\pi}_{2}(1-\hat{\pi}_{2})}{n_{2}} +
 \frac{\hat{\pi}_{1}(1-\hat{\pi}_{1})}{n_{1}}
 }
-\label{ciDpi}$$ as the confidence interval for $\Delta=\pi_{2}-\pi_{1}$,
+\label{eq:ciDpi}$$ as the confidence interval for $\Delta=\pi_{2}-\pi_{1}$,
 with confidence level $1-\alpha$.
 
 For an illustration of the calculations, consider Example 5.4. Denoting
