--- a/06-MY451_6.rmd
+++ b/06-MY451_6.rmd
@@ -56,11 +56,11 @@ consider specific characteristics of the distribution, i.e. its
 \@ref(s-probs-distribution). For the distribution of a continuous
 variable, the most important parameters are the **population mean**
 $$\mu=\frac{\sum Y_{i}}{N}
-\label{mu}$$ and the **population variance**
+\label{eq:mu}$$ and the **population variance**
 $$\sigma^{2} = \frac{\sum (Y_{i}-\mu)^{2}}{N}
-\label{sigma2}$$ or, instead of the variance, the **population standard
+\label{eq:sigma2}$$ or, instead of the variance, the **population standard
 deviation** $$\sigma = \sqrt{\frac{\sum (Y_{i}-\mu)^{2}}{N}}.
-\label{sigma}$$ Here $\mu$ and $\sigma$ are the lower-case Greek letters
+\label{eq:sigma}$$ Here $\mu$ and $\sigma$ are the lower-case Greek letters
 “mu” and “sigma” respectively, and $\sigma^{2}$ is read “sigma squared”.
 It is common to use Greek letters for population parameters, as we did
 also for the probability parameter $\pi$ in Chapter \@ref(c-probs).
@@ -88,11 +88,11 @@ The population formulas (\@ref(mu})–(\ref{sigma)) clearly resemble those
 of some sample statistics introduced in Chapter \@ref(c-descr1),
 specifically the *sample* mean, variance and standard deviation
 $$\begin{aligned}
-\bar{Y}&=&\frac{\sum Y_{i}}{n}, \label{Ybar_ch6} \\
+\bar{Y}&=&\frac{\sum Y_{i}}{n}, \label{eq:Ybar_ch6} \\
 s^{2} &=& \frac{\sum (Y_{i}-\bar{Y})^{2}}{n-1} \text{and}
-\label{s2_ch6} \\
+\label{eq:s2_ch6} \\
 s &=& \sqrt{\frac{\sum (Y_{i}-\bar{Y})^{2}}{n-1}}
-\label{s_ch6}\end{aligned}$$ where the sums are now over the $n$
+\label{eq:s_ch6}\end{aligned}$$ where the sums are now over the $n$
 observations in a sample. These can be used as descriptions of the
 sample distribution as discussed in Chapter \@ref(c-descr1), but also as
 *point estimates* of the corresponding population parameters in the
@@ -131,7 +131,7 @@ estimators certain mathematically desirable properties ($s^{2}$ is an
 not). This detail need not concern us here. In fact, the statistics
 which use $n$ instead,
 i.e. $$\hat{\sigma}^{2}=\frac{\sum (Y_{i}-\bar{Y})^{2}}{n}
-\label{s2b}$$ for $\sigma^{2}$ and
+\label{eq:s2b}$$ for $\sigma^{2}$ and
 $\hat{\sigma}=\sqrt{\hat{\sigma}^{2}}$ for $\sigma$, are also sensible
 estimates and very similar to $s^{2}$ and $s$ unless $n$ is very small.
 In general, there are often several possible sample statistics which
@@ -359,7 +359,7 @@ required for this in some computer packages and also to provide an
 alternative method which does not require a computer, we need to
 introduce one more new quantity. This is the **Z score**, which is
 defined as $$Z = \frac{Y-\mu}{\sigma}
-\label{Zscore}$$ where $Y$ can be any value of the variable of interest.
+\label{eq:Zscore}$$ where $Y$ can be any value of the variable of interest.
 For example, in the blood pressure example the $Z$ scores corresponding
 to values 60 and 90 are $Z=(60-74.2)/11.3=-1.26$ and
 $Z=(90-74.2)/11.3=1.40$ respectively. The $Z$ score can be interpreted
@@ -610,7 +610,7 @@ Suppose also that the following condition holds: for every $\epsilon>0$,
 $$\frac{1}{B_{n}^{2}}\,
 \sum_{j=1}^{n} \, \text{E}\{ Y_{nj}^{2} I(|Y_{nj}|\ge \epsilon B_{n})\}
 \rightarrow 0 \; \text{  as  } \; n\rightarrow \infty.
-\label{lindeberg}$$ Then
+\label{eq:lindeberg}$$ Then
 $Z_{n}/B_{n} \stackrel{\mathcal{L}}{\longrightarrow} N(0,1)$.
 
 No, that will not come up in the examination. The theorem is given here
