--- a/04-MY451_4.rmd
+++ b/04-MY451_4.rmd
@@ -158,7 +158,7 @@ independent or dependent. In this language, the null hypothesis of the
 $\chi^{2}$ test of independence is that
 $$H_{0}: \;\text{The variables are statistically independent in the
 population}.
-\label{H0_chi2}$$ In our example the null hypothesis is thus that a
+\label{eq:H0_chi2}$$ In our example the null hypothesis is thus that a
 person’s sex and his or her attitude toward income redistribution are
 independent in the population of adults in the UK.
 
@@ -188,7 +188,7 @@ $\chi^{2}$ test of independence this is simply the logical opposite of
 (\@ref(H0-chi2)),
 i.e. $$H_{a}: \;\text{The variables are not statistically independent in the
 population}.
-\label{Ha_chi2}$$ In terms of conditional distributions, $H_{a}$ is that
+\label{eq:Ha_chi2}$$ In terms of conditional distributions, $H_{a}$ is that
 the conditional distributions of one variable given the other are not
 all identical, i.e. that for at least one pair of levels of the
 explanatory variable the conditional probabilities of at least one
@@ -378,7 +378,7 @@ test statistic for this example are shown in Table
 
 -   Finally, aggregating these quantities to get the $\chi^{2}$ test
     statistic $$\chi^{2} = \sum \frac{(f_{o}-f_{e})^{2}}{f_{e}}.
-    \label{chi2}$$ Here the summation sign $\Sigma$ indicates that
+    \label{eq:chi2}$$ Here the summation sign $\Sigma$ indicates that
     $\chi^{2}$ is obtained by adding up the quantities
     $(f_{o}-f_{e})^{2}/f_{e}$ across all the cells of the table.
 
